--- a/style.css
+++ b/style.css
@@ -59,10 +59,11 @@ footer{
     display: flex;
     flex-direction: row;
     width: 30vw;
-    justify-content: space-between;
+    padding: 10px;
 }
 i{
-    font-family: 50px;
+    width: 50px;
+    height: 50px;
 }
 
 footer p{
