--- a/style.css
+++ b/style.css
@@ -58,12 +58,13 @@ footer{
 .alignemnt-icons{
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
     width: 30vw;
     padding: 10px;
 }
 i{
-    width: 50px;
-    height: 50px;
+    font-size: 50px;
+    
 }
 
 footer p{
