--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ footer{
     width: 40vw;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .alignemnt-icons{
     display: flex;
