--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 
 body{
     background-color: #222;
-    overflow-x: hidden;
     height: 100vh;
     width: 100vw;
 }
@@ -73,22 +72,24 @@ footer p{
 }
 
 .news-container {
-    max-width: 100%;
     margin: 0 auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: #333;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex; 
+    flex-wrap: wrap; 
 }
 
 .news-container img {
-    max-width: 100%;
-    height: auto;
-    display: block;
+
     margin-bottom: 20px;
+    border-radius: 10px; 
 }
 
 .news-content {
+    flex: 0 0 calc(100% - 20px); 
+    margin-right: 20px; 
     text-align: left;
 }
 
@@ -99,16 +100,37 @@ footer p{
 
 .news-content p {
     font-size: 16px;
-    color: #666;
+    color: white;
     margin-bottom: 15px;
 }
 
 .read-more {
-    color: #007bff;
+    color: white;
     text-decoration: none;
     font-weight: bold;
 }
 
 .read-more:hover {
     text-decoration: underline;
+}
+
+header{
+    width: 100vw;
+    height: 15vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.header-topics{
+    display: flex;
+    flex-direction: row;
+    color: white;
+    width: 100vw;
+    justify-content: space-around;
+    text-decoration: none;
+    list-style-type: none;
+    cursor: pointer; ;
+}
+.news-content h2{
+    color: white;
 }
