--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ footer p{
 .ContainerRow2 {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
     justify-content: center;
     max-width: 800px; /* Limit the width of the container */
     margin: 0 auto; /* Center the container */
@@ -199,4 +200,19 @@ header{
     text-decoration: none;
     list-style-type: none;
     cursor: pointer; ;
+}
+@media only screen and (max-width: 768px) {
+    header {
+        padding: 5px;
+    }
+
+    .header-topics {
+        justify-content: center;
+    }
+
+    .footerlokacije,
+    .footerikone {
+        flex-direction: column;
+        align-items: center;
+    }
 }
