--- a/style.css
+++ b/style.css
@@ -202,19 +202,11 @@ header{
     cursor: pointer; ;
 }
 @media only screen and (max-width: 768px) {
-    header {
-        padding: 5px;
+    .ContainerRow2 {
+        flex-direction: column;
     }
 
-    .header-topics {
-        justify-content: center;
-    }
-    .header{
-        flex-direction: column;
-    }
-    .footerlokacije,
-    .footerikone {
-        flex-direction: column;
-        align-items: center;
+    .news-container {
+        width: calc(100% - 40px);
     }
 }
