--- a/taksi.css
+++ b/taksi.css
@@ -17,10 +17,14 @@ img{
 p{
     background-color: #333;
     color: white;
-    font-size: 30px;
+    font-size: 25px;
     text-align: center;
 }
 body{
     background-color: #222;
 
+}
+footer{
+    color:white;
+    padding-left: 120px;
 }
