--- a/taksi.css
+++ b/taksi.css
@@ -28,3 +28,11 @@ footer{
     color:white;
     padding-left: 120px;
 }
+h4{
+    background-color: white;
+    background: #333;
+    font-size: 40px;
+    text-align: center;
+    height:15vh;
+    padding-top: 30px;
+}
