--- a/taksi.css
+++ b/taksi.css
@@ -29,7 +29,7 @@ footer{
     padding-left: 120px;
 }
 h4{
-    background-color: white;
+    color: white;
     background: #333;
     font-size: 40px;
     text-align: center;
