--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ footer{
     padding: 10px;
 }
 i{
-    font-size: 3vw;
+    font-size: 2vw;
     
 }
 
@@ -67,80 +67,15 @@ footer p{
 }
 
 
-/*
-.ContainerRow2 {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: #333; /
-    padding: 20px; 
-    border-radius: 10px; /
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-}
-
 .news-container {
-    width: calc(50% - 10px);
-    border-radius: 10px;
-    overflow: hidden; 
-}
-
-.news-container img {
-    width: 100%;
-    height: auto;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
-.news-content {
-    padding: 20px; 
-    background-color: #444; 
-}
-
-.news-content h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-    color: white;
-}
-
-.news-content p {
-    font-size: 16px;
-    color: #ddd; 
-    margin-bottom: 15px;
-}
-
-.read-more {
-    color: #007bff;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.read-more:hover {
-    text-decoration: underline;
-}
-
-*/
-
-.ContainerRow2 {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-    max-width: 800px; /* Limit the width of the container */
-    margin: 0 auto; /* Center the container */
-    background-color: #333;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-}
-
-.news-container {
-    width: calc(50% - 20px); /* Adjusted width */
+    width: 15vw;
     margin: 10px; /* Add some margin between containers */
     border-radius: 10px;
     overflow: hidden;
     background-color: #444; /* Background color for container */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease; /* Smooth transition on hover */
+    height: 40vh;
 }
 
 .news-container:hover {
@@ -185,6 +120,7 @@ header{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 .header-topics{
     display: flex;
