--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body{
     height: 100vh;
     width: 100vw;
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 
@@ -34,7 +36,22 @@ footer{
     color: gray;
     text-decoration: none;
     list-style-type: none;
+    width: 11%;
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.2s all;
 }
+
+.lokacija:hover {
+    background-color: white; /* Change background color on hover */
+}
+
+.lokacija:hover .lokacija-a{
+   color:#222; /* Change background color on hover */
+}
+
 .lokacija-a{
     color: white;
     text-decoration: none;
@@ -65,62 +82,9 @@ i{
 footer p{
     color: white;
 }
-
-
-
-.ContainerRow2 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-}
-
-.news-container {
-    margin-bottom: 20px;
-    border-radius: 10px;
-    overflow: hidden;
-    background-color: #444;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s ease;
-}
-
-.news-container:hover {
-    transform: translateY(-5px);
-}
-
-.news-container img {
-    width: 100%;
-    height: 200px; /* include this comment  from before verz improtnat ovjde mnjeamjo velicnu slike*/
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
-.news-content {
-    padding: 20px;
-}
-
-.news-content h2 {
-    font-size: 20px;
-    margin-bottom: 10px;
-}
-
-.news-content p {
-    font-size: 14px;
-    margin-bottom: 15px;
-}
-
-.read-more {
-    color: #007bff;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.read-more:hover {
-    text-decoration: underline;
-}
 header{
     width: 100vw;
-    height: 15vh;
+    height: 10vh;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -148,4 +112,11 @@ header{
     .news-container {
         width: calc(100% - 40px);
     }
+}
+.main{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
