--- a/newsStyle.css
+++ b/newsStyle.css
@@ -4,6 +4,7 @@
     margin-bottom: 20px;
     border-radius: 10px;
     overflow: hidden;
+    position: relative;
     background-color: #444;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease;
@@ -17,15 +18,33 @@
     transform: translateY(-5px);
 }
 
-.news-container img {
+.small-image-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 200px; 
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6); /* Adjust opacity as needed */
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
 
+.news-container img {
+    width: 100%;
+    height: 40vh; 
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    object-fit: cover;
+}
+
 .news-content {
     padding: 20px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px;
+    color: white;
 }
 
 .news-content h2 {
