--- a/vijesti/univerzalno.css
+++ b/vijesti/univerzalno.css
@@ -29,6 +29,7 @@ h1{
     height: 70vh;
     width: 50vw;
     border-radius: 50px;
+    margin-left: 20px;
 }
 
 .submit{
@@ -36,7 +37,7 @@ h1{
     flex-direction: column;
     align-items: flex-start;
     width: 90vw;
-    margin-bottom: 150px;
+    margin-bottom: 300px;
     height: 50vh;
     justify-content: space-around;
 }
