--- a/vijesti/univerzalno.css
+++ b/vijesti/univerzalno.css
@@ -13,23 +13,32 @@ main{
     height: 70vh;
     align-items: center;
     justify-content: space-between;
+  
+
 }
 h1{
    color: white;
    font-weight: bold;
-   font-size: 50px; 
+   font-size: 45px; 
+   margin-top: 20px;
+   text-align: center;
+
 }
 
 .text{
     color: white;
-    font-size: 25px;
+    font-size: 17px;
+    text-align: center;
+    padding-bottom: 90px;
+
 }
 
 .details img{
     height: 70vh;
     width: 50vw;
     border-radius: 50px;
-    margin-left: 20px;
+    margin-left: 30px;
+    margin-right: 10px;
 }
 
 .submit{
@@ -40,9 +49,12 @@ h1{
     margin-bottom: 300px;
     height: 50vh;
     justify-content: space-around;
+    margin-top: 60px;
+    margin-right:5px;
 }
 
 textarea{
+
     background-color: #222;
     border: solid 3px #333;
     border-radius: 30px;
@@ -70,6 +82,7 @@ button{
     padding-right: 30px;
     font-size: 30px;
     border-radius: 30px;
+    margin-top: 20px;
 }
 
 button:hover{
